syntax = "proto3";

package appootb.common;

option go_package = "github.com/appootb/substratum/proto/go/common";


// Network enums.
enum Network {
  NETWORK_UNSPECIFIED = 0; // Unspecified

  NETWORK_ETHERNET = 1; // Ethernet
  NETWORK_WIFI     = 2; // Wifi
  NETWORK_CELLULAR = 3; // Cellular
}

// Platform enums.
enum Platform {
  PLATFORM_UNSPECIFIED = 0; // Unspecified

  PLATFORM_H5      = 1; // H5
  PLATFORM_BROWSER = 2; // Browser
  PLATFORM_CHROME  = 4; // ChromeOS
  PLATFORM_WEB     = 7; // WEB, H5 | Browser | ChromeOS

  PLATFORM_LINUX   = 16;  // Linux
  PLATFORM_WINDOWS = 32;  // Windows
  PLATFORM_DARWIN  = 64;  // MacOS
  PLATFORM_PC      = 112; // PC, Linux | Windows | MacOS

  PLATFORM_ANDROID = 256; // Android
  PLATFORM_IOS     = 512; // iOS
  PLATFORM_MOBILE  = 768; // Mobile, Android | iOS

  PLATFORM_SERVER = 4096; // Internal server
}

// Request metadata.
message Metadata {
  string product     = 1; // App product name
  string package     = 2; // Application package name
  string version     = 3; // Application version
  string os_version  = 4; // Platform os version
  string brand       = 5; // Device brand or manufacturer
  string model       = 6; // Device model
  string device_id   = 7; // Device unique ID
  string fingerprint = 8; // Device fingerprint

  string locale    = 11; // Device locale
  string latitude  = 12; // Device coordinate latitude
  string longitude = 13; // Device coordinate longitude

  Platform platform = 15; // Device platform, ios or android
  Network  network  = 16; // Device network type, wifi or 4g

  int64  timestamp = 18; // Local device timestamp (in millisecond)
  string trace_id  = 19; // Request unique trace ID

  bool is_emulator = 21; // If running in an emulator
  bool is_develop  = 22; // If running in develop env
  bool is_testing  = 23; // If running in testing env

  string channel    = 31; // Distribution channel
  string uuid       = 32; // Device UUID/OAID
  string imei       = 33; // Device IMEI
  string device_mac = 35; // Device MAC Addr
  string client_ip  = 34; // Client IP
  string user_agent = 36; // User-agent

  string token = 49; // Account token
}
